@@ -2,6 +2,7 @@ Changelog file for Login component.
 
 Login 1.7.1
 ====================================
+- [#5734] Add &allowedFields to Register to allow restricting of submitted fields to a specific set
 - [#6010] Fix typo in UpdateProfile mismatching ID of profile to internalKey
 - [#5961] Add &trimPassword to automatically trim whitespace from submitted passwords
 - Add &generatePassword to automatically generate a password instead of having to provide one manually
